--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,17 @@ div {
   padding: 1;
   display: grid;
   grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr
 }
 
 .Maerten {
   grid-column: 1 / -1;
   grid-row: 1;
   width: 100%;
+}
+
+main {
+  grid-template-areas:
+  gap:
+  grid-area:
 }
